--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
+theme: jekyll-theme-prologue
+remote_theme: chrisbobbe/jekyll-theme-prologue
+
+
 title: Your awesome title
 subtitle: Your awesome subtitle
 description: >- # this means to ignore newlines until "baseurl:"
