--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-theme: jekyll-theme-prologue
-remote_theme: chrisbobbe/jekyll-theme-prologue
+#theme: jekyll-theme-prologue
+#remote_theme: chrisbobbe/jekyll-theme-prologue
 
 
 title: Your awesome title
