--- a/_config.yml
+++ b/_config.yml
@@ -35,13 +35,13 @@
 #remote_theme: chrisbobbe/jekyll-theme-prologue
 
 
-title: Your awesome title
-subtitle: Your awesome subtitle
+title: Cryptology and Algorithm
+subtitle: 한양대학교 자연과학관 736호
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
+author: Gyumin Lim
+email: 6sephiruth@gmail.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
