--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@
 #remote_theme: chrisbobbe/jekyll-theme-prologue
 
 
-title: Cryptology and Algorithm
+title: Lab ofCryptology and Algorithm
 subtitle: 한양대학교 자연과학관 736호
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
